--- a/build.gradle
+++ b/build.gradle
@@ -138,32 +138,50 @@ tasks.register('generateBindings') {
     description = 'Generates Java bindings using jextract'
 
     inputs.file('native/include/webgpu/webgpu.h')
+    inputs.file('native/include/webgpu/wgpu.h')
     outputs.dir('src/generated/java')
 
     doLast {
         def jextractPath = findJextract()
         if (jextractPath == null) {
-            jextractPath = "${rootDir}/tools/jextract-22/bin/jextract"
+            def jextractExe = System.getProperty('os.name').toLowerCase().contains('windows') ? 'jextract.bat' : 'jextract'
+            jextractPath = "${gradle.gradleUserHomeDir}/jextract-22/bin/${jextractExe}"
             if (!file(jextractPath).exists()) {
-                throw new GradleException("jextract not found at ${jextractPath}. Please run the setup again.")
+                throw new GradleException("jextract not found at ${jextractPath}. Please run './gradlew downloadJextract' first.")
             }
         }
 
-        def headerFile = file('native/include/webgpu/webgpu.h')
         def outputDir = file('src/generated/java')
         outputDir.mkdirs()
 
-        if (headerFile.exists()) {
-            println "Generating Java bindings from ${headerFile}"
+        // Generate bindings for standard WebGPU (webgpu.h)
+        def webgpuHeaderFile = file('native/include/webgpu/webgpu.h')
+        if (webgpuHeaderFile.exists()) {
+            println "Generating Java bindings from ${webgpuHeaderFile}"
             exec {
                 commandLine jextractPath,
                         '--output', outputDir,
                         '--target-package', 'org.wgpu4j.bindings',
                         '--include-dir', file('native/include').absolutePath,
-                        headerFile.absolutePath
+                        webgpuHeaderFile.absolutePath
             }
         } else {
-            throw new GradleException("Header file not found: ${headerFile}")
+            throw new GradleException("Header file not found: ${webgpuHeaderFile}")
+        }
+
+        // Generate bindings for wgpu-native extensions (wgpu.h)
+        def wgpuHeaderFile = file('native/include/webgpu/wgpu.h')
+        if (wgpuHeaderFile.exists()) {
+            println "Generating Java bindings from ${wgpuHeaderFile}"
+            exec {
+                commandLine jextractPath,
+                        '--output', outputDir,
+                        '--target-package', 'org.wgpu4j.bindings',
+                        '--include-dir', file('native/include').absolutePath,
+                        wgpuHeaderFile.absolutePath
+            }
+        } else {
+            throw new GradleException("Header file not found: ${wgpuHeaderFile}")
         }
     }
 }
@@ -320,4 +338,91 @@ tasks.register('downloadWgpuNative') {
 tasks.register('copyNativeLibraries') {
     dependsOn 'copyAllNativeLibraries'
     description = 'Copies native libraries to resources'
+}
+
+tasks.register('downloadJextract') {
+    description = 'Downloads and sets up jextract in Gradle user home'
+    
+    def jextractVersion = '22-jextract+6-47'
+    def jextractDir = file("${gradle.gradleUserHomeDir}/jextract-22")
+    
+    inputs.property('jextractVersion', jextractVersion)
+    outputs.dir(jextractDir)
+    
+    doLast {
+        println "Starting jextract download task"
+        println "Target directory: ${jextractDir}"
+        println "Directory exists: ${jextractDir.exists()}"
+        
+        def platform = getJextractPlatform()
+        def fileName = "openjdk-${jextractVersion}_${platform}_bin.tar.gz"
+        def downloadUrl = "https://download.java.net/java/early_access/jextract/22/6/${fileName}"
+        def tarFile = file("${gradle.gradleUserHomeDir}/${fileName}")
+        
+        if (!tarFile.exists()) {
+            println "Downloading jextract from ${downloadUrl}"
+            try {
+                new URL(downloadUrl).withInputStream { i ->
+                    tarFile.withOutputStream { it << i }
+                }
+            } catch (Exception e) {
+                throw new GradleException("Failed to download jextract: ${e.message}")
+            }
+        }
+        
+        // Check if jextract binary actually exists, not just the directory
+        def jextractExe = System.getProperty('os.name').toLowerCase().contains('windows') ? 'jextract.bat' : 'jextract'
+        def jextractBinary = file("${jextractDir}/bin/${jextractExe}")
+        
+        if (!jextractBinary.exists()) {
+            println "Extracting jextract to ${gradle.gradleUserHomeDir}"
+            copy {
+                from tarTree(tarFile)
+                into gradle.gradleUserHomeDir
+            }
+            
+            // The extracted directory is named jextract-22, which matches our target
+            def extractedDir = file("${gradle.gradleUserHomeDir}/jextract-22")
+            if (!extractedDir.exists()) {
+                // List what was actually extracted to debug
+                def gradleHome = file(gradle.gradleUserHomeDir)
+                println "Extraction completed. Contents of gradle home:"
+                gradleHome.listFiles().each { f ->
+                    if (f.name.contains('jdk') || f.name.contains('jextract')) {
+                        println "  Found: ${f.name} (${f.isDirectory() ? 'directory' : 'file'})"
+                    }
+                }
+                throw new GradleException("Expected extracted directory ${extractedDir} not found")
+            } else {
+                println "Successfully extracted jextract to ${extractedDir}"
+            }
+        }
+        
+        // Make jextract executable on Unix systems
+        if (!System.getProperty('os.name').toLowerCase().contains('windows')) {
+            def jextractBin = file("${jextractDir}/bin/jextract")
+            if (jextractBin.exists()) {
+                exec {
+                    commandLine 'chmod', '+x', jextractBin.absolutePath
+                }
+            }
+        }
+        
+        println "jextract installed to: ${jextractDir}"
+        println "You can also set JEXTRACT_HOME=${jextractDir} to use it globally"
+    }
+}
+
+def getJextractPlatform() {
+    def os = System.getProperty('os.name').toLowerCase()
+    def arch = System.getProperty('os.arch').toLowerCase()
+    
+    if (os.contains('linux')) {
+        return arch.contains('aarch64') || arch.contains('arm') ? 'linux-aarch64' : 'linux-x64'
+    } else if (os.contains('mac')) {
+        return arch.contains('aarch64') || arch.contains('arm') ? 'macos-aarch64' : 'macos-x64'
+    } else if (os.contains('windows')) {
+        return 'windows-x64'
+    }
+    throw new GradleException("Unsupported platform for jextract: ${os}/${arch}")
 }
